# CAM_USBScroll

Libraries/ESEUsbCamLib/include/: eseusbcam.h
Libraries/ESEUsbCamLib/lib/: ESEUsbCam.lib
UsbScroll/: CMakeLists.txt
UsbScroll/resources/: UsbScroll.fbp  flip_horz.png.h  flip_vert.png.h  image32x32.png.h  log.png.h  settings32x32.png.h  start32x32.png.h  text32x32.png.h
UsbScroll/source/: ilogmessagesreceiver.h  ocameradatamanager.cpp  ocameradatamanager.cpp.bak  ocameradatamanager.h  ocamlogwindow.cpp  ocamlogwindow.h  odevicepropertiesfrm.cpp  odevicepropertiesfrm.h  odrawingpanel.cpp  odrawingpanel.h  ofeaturecontrol.cpp  ofeaturecontrol.h  ofpscalculator.h  oframeinfo.cpp  oframeinfo.h  ouartmodesmanager.cpp  ouartmodesmanager.h  ouartparams.cpp  ouartparams.h  usbcamversion.h  usbscrollapp.cpp  usbscrollapp.h  usbscrollguibase.cpp  usbscrollguibase.h  usbscrollmainframe.cpp  usbscrollmainframe.h
